--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,14 @@
     "app/vendor",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-resource": "^1.6.7",
+    "angular": "^1.6.7",
+    "angular-aria": "^1.6.7",
+    "angular-messages": "^1.6.7",
+    "angular-material": "^1.1.5",
+    "angular-ui-router": "^1.0.11",
+    "angular-animate": "^1.6.7"
+  }
 }
