--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
+    "browserify": "^14.5.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.11",
-    "angular": "^1.6.6",
-    "angular-material": "^1.1.5"
+    "angular": "^1.6.7",
+    "angular-animate": "^1.6.7",
+    "angular-aria": "^1.6.7",
+    "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.7",
+    "angular-resource": "^1.6.7",
+    "angular-ui-router": "^0.4.3"
   }
 }
