--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prestart": "npm install",
     "start": "gulp",
     "vendor": "gulp vendor",
+    "prebuild": "gulp clean",
     "build": "gulp build",
     "dev": "gulp dev"
   },
@@ -23,6 +24,7 @@
     "browserify": "^14.5.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-rename": "^1.2.2",
